--- a/my_fastapi_app/requirements.txt
+++ b/my_fastapi_app/requirements.txt
@@ -44,3 +44,6 @@ uvicorn==0.38.0
 uvloop==0.22.1
 watchfiles==1.1.1
 websockets==15.0.1
+
+# Additional dependencies for modular structure
+pydantic-settings
