--- a/my_fastapi_app/docker-compose.yml
+++ b/my_fastapi_app/docker-compose.yml
@@ -21,3 +21,10 @@ services:
       - "8080:8080"
     depends_on:
       - postgres
+
+  redis:
+    image: redis:7
+    container_name: fastapi_redis
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
