--- a/my_fastapi_app/requirements.txt
+++ b/my_fastapi_app/requirements.txt
@@ -1,13 +1,17 @@
+aioredis==2.0.1
 alembic==1.17.1
 annotated-doc==0.0.3
 annotated-types==0.7.0
 anyio==4.11.0
+async-timeout==5.0.1
 asyncpg==0.30.0
 bcrypt==5.0.0
+bleach==6.3.0
 certifi==2025.10.5
 cffi==2.0.0
 click==8.3.0
 cryptography==46.0.3
+Deprecated==1.3.1
 dnspython==2.8.0
 ecdsa==0.19.1
 email-validator==2.3.0
@@ -20,11 +24,14 @@ httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
 idna==3.11
+itsdangerous==2.2.0
 Jinja2==3.1.6
+limits==5.6.0
 Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+packaging==25.0
 psycopg2-binary==2.9.11
 pyasn1==0.6.1
 pycparser==2.23
@@ -40,12 +47,15 @@ rich==14.2.0
 rich-toolkit==0.15.1
 rignore==0.7.6
 rsa==4.9.1
+secure==1.0.1
 sentry-sdk==2.43.0
 shellingham==1.5.4
 six==1.17.0
+slowapi==0.1.9
 sniffio==1.3.1
 SQLAlchemy==2.0.44
 starlette==0.49.3
+starlette-csrf==3.0.0
 typer==0.20.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
@@ -53,4 +63,6 @@ urllib3==2.5.0
 uvicorn==0.38.0
 uvloop==0.22.1
 watchfiles==1.1.1
+webencodings==0.5.1
 websockets==15.0.1
+wrapt==2.0.1
